# backend/docs/swagger.json
@@ -1872,7 +1872,7 @@
                 "online": {
                     "type": "boolean"
                 },
-                "user_id": {
+                "public_id": {
                     "type": "integer"
                 }
             }
@@ -1914,11 +1914,11 @@
         "dto.ConversationPeerResp": {
             "type": "object",
             "properties": {
-                "id": {
-                    "type": "integer"
-                },
                 "online": {
                     "type": "boolean"
+                },
+                "public_id": {
+                    "type": "integer"
                 },
                 "username": {
                     "type": "string"
@@ -1951,7 +1951,7 @@
                 "online": {
                     "type": "boolean"
                 },
-                "user_id": {
+                "public_id": {
                     "type": "integer"
                 },
                 "username": {
@@ -2004,11 +2004,11 @@
         "dto.FriendRequestUserResp": {
             "type": "object",
             "properties": {
-                "id": {
-                    "type": "integer"
-                },
                 "online": {
                     "type": "boolean"
+                },
+                "public_id": {
+                    "type": "integer"
                 },
                 "username": {
                     "type": "string"
@@ -2074,11 +2074,11 @@
                 "online": {
                     "type": "boolean"
                 },
+                "public_id": {
+                    "type": "integer"
+                },
                 "role": {
                     "$ref": "#/definitions/model.ConversationMemberRole"
-                },
-                "user_id": {
-                    "type": "integer"
                 },
                 "username": {
                     "type": "string"
@@ -2105,7 +2105,7 @@
                 "latest_sent_seq": {
                     "type": "integer"
                 },
-                "read_by_user_ids": {
+                "read_by_public_ids": {
                     "type": "array",
                     "items": {
                         "type": "integer"
@@ -2148,7 +2148,7 @@
                 "extra": {
                     "type": "object"
                 },
-                "from": {
+                "from_public_id": {
                     "type": "integer"
                 },
                 "id": {
@@ -2218,11 +2218,11 @@
         "dto.UserInfoResp": {
             "type": "object",
             "properties": {
-                "id": {
-                    "type": "integer"
-                },
                 "online": {
                     "type": "boolean"
+                },
+                "public_id": {
+                    "type": "integer"
                 },
                 "username": {
                     "type": "string"
