# backend/internal/handler/dto/user.go
@@ -1,18 +1,18 @@
 package dto
 
 type CheckUserOnlineResp struct {
-	UserID uint64 `json:"user_id"`
-	Online bool   `json:"online"`
+	PublicID uint64 `json:"public_id"`
+	Online   bool   `json:"online"`
 }
 
 type UserInfoResp struct {
-	ID       uint64 `json:"id"`
+	PublicID uint64 `json:"public_id"`
 	Username string `json:"username"`
 	Online   bool   `json:"online"`
 }
 
 type FriendInfoResp struct {
-	UserID         uint64 `json:"user_id"`
+	PublicID       uint64 `json:"public_id"`
 	Username       string `json:"username"`
 	Online         bool   `json:"online"`
 	ConversationID uint64 `json:"conversation_id"`
